--- a/app/src/main/res/layout/activity_database_recycler.xml
+++ b/app/src/main/res/layout/activity_database_recycler.xml
@@ -17,9 +17,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerImage"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
 
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
