--- a/app/src/main/res/layout/activity_descriptionpage.xml
+++ b/app/src/main/res/layout/activity_descriptionpage.xml
@@ -49,7 +49,7 @@
       app:layout_constraintVertical_bias="0.575" />
 
   <androidx.appcompat.widget.AppCompatButton
-      android:id="@+id/button"
+      android:id="@+id/buttonbid"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="Button"
@@ -90,4 +90,17 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.654" />
+
+  <EditText
+      android:id="@+id/Amount"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:ems="10"
+      android:inputType="number"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.079"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.733" />
 </androidx.constraintlayout.widget.ConstraintLayout>
