--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,12 +4,14 @@
     >
     <item
         android:id="@+id/home"
+        android:icon="@drawable/baseline_home_24"
         android:title="Home"
 
         >
 
     </item>
     <item
+        android:icon="@drawable/baseline_sell_24"
         android:id="@+id/Sell"
         android:title="Sell"
 
@@ -17,6 +19,7 @@
 
     </item>
     <item
+        android:icon="@drawable/baseline_settings_24"
         android:id="@+id/setting"
         android:title="Setting"
 
