Add the userinforecycler

--- a/app/src/main/res/layout/fragment_userinforecycler.xml
+++ b/app/src/main/res/layout/fragment_userinforecycler.xml
@@ -2,22 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/secoun"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-  >
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigationView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/menu" />
+    android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerImage"
+        android:id="@+id/recycler"
         android:layout_width="wrap_content"
 
         android:layout_height="wrap_content"
@@ -27,6 +16,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/listitemrecycler" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
