--- a/app/src/main/res/layout/listitemrecycler.xml
+++ b/app/src/main/res/layout/listitemrecycler.xml
@@ -1,95 +1,56 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="15dp">
+    android:orientation="vertical"
+    tools:context=".MainActivity">
+
+    <!-- Your other views -->
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="2dp"
-        app:cardBackgroundColor="#5499E1DA"
-        app:cardCornerRadius="3dp"
-
-        >
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="5dp"
-    android:orientation="vertical">
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.438"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.048"
-        tools:srcCompat="@tools:sample/avatars" />
-    <TextView
-        android:id="@+id/V1"
-        android:layout_width="100dp"
-        android:text="Product Name"
-        android:textColor="#F40B0B"
-        android:textStyle="bold"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"></TextView>
-    <TextView
-        android:id="@+id/Tv"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp">
-     </TextView>
-    <TextView
-        android:id="@+id/V2"
-        android:layout_width="100dp"
-        android:text="Catagory"
-        android:textColor="#F40B0B"
-        android:textStyle="bold"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"></TextView>
-    <TextView
-        android:id="@+id/Tv1"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp">
-    </TextView>
-    <TextView
-        android:id="@+id/V3"
-        android:layout_width="100dp"
-        android:text="Bid Price"
-        android:textColor="#F40B0B"
-        android:textStyle="bold"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"></TextView>
+        android:layout_margin="16dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp">
 
-    <TextView
-        android:id="@+id/Tv2"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="0dp">
 
-    </TextView>
+            <!-- Add your card content here -->
 
+            <ImageView
+                android:id="@+id/imageVi"
+                android:layout_width="350dp"
+                android:layout_height="100dp" />
 
+            <TextView
+                android:id="@+id/productname"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Product Name"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/counterrr"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="162dp"
-        android:textColor="@color/black"
-        android:text="" />
+            <TextView
+                android:id="@+id/nametext"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text=""
+                android:textColor="#666666"
+                android:textSize="14sp" />
 
-</LinearLayout>
-
+        </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- Your other views -->
+
+</LinearLayout>
