--- a/app/src/main/res/layout/ddrawale_menu_image_text.xml
+++ b/app/src/main/res/layout/ddrawale_menu_image_text.xml
@@ -11,7 +11,7 @@
             android:id="@+id/menu_item_icon"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/circle" />
+            android:src="@drawable/profileimage" />
 
     <TextView
         android:id="@+id/menu_drawer_title"
