--- a/app/src/main/res/menu/menu2.xml
+++ b/app/src/main/res/menu/menu2.xml
@@ -1,19 +1,23 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-<group android:checkableBehavior="single">
+<group >
         <item
             android:id="@+id/drawer_item_1"
-            android:title="Drawer Item 1"
+            android:title="About App"
+            android:icon="@drawable/baseline_supervised_user_circle_24"
             />
 
         <item
             android:id="@+id/drawer_item_2"
-            android:title="Drawer Item 2"
+            android:title="Bids Record"
+            android:icon="@drawable/baseline_saved_search_24"
              />
 
         <item
             android:id="@+id/drawer_item_3"
-            android:title="Drawer Item 3"
+            android:title="Log Out"
+            android:icon="@drawable/baseline_logout_24"
+
              />
 </group>
 </menu>
