After updating the App lOgo

--- a/app/src/main/res/layout/activity_descriptionpage.xml
+++ b/app/src/main/res/layout/activity_descriptionpage.xml
@@ -52,7 +52,7 @@
       android:id="@+id/buttonbid"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:background="#2CF116"
+      android:background="#009688"
       android:text="Place Bid"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
@@ -149,7 +149,7 @@
       android:id="@+id/highestbid"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="0"
+      android:text="No Bid"
       android:textColor="@color/black"
       android:textSize="16sp"
       android:textStyle="bold"
