--- a/app/src/main/res/layout/fragment_loginfragement.xml
+++ b/app/src/main/res/layout/fragment_loginfragement.xml
@@ -12,7 +12,7 @@ android:id="@+id/loogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Online Auction"
-        android:textColor="#32B837"
+        android:textColor="#009688"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -153,7 +153,7 @@ android:id="@+id/loogin"
         android:id="@+id/login1"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:background="#32B837"
+        android:background="#009688"
         android:text="Login"
         android:textStyle="bold"
         android:textSize="17dp"
