--- a/app/src/main/res/layout/fragment_startupapp.xml
+++ b/app/src/main/res/layout/fragment_startupapp.xml
@@ -13,7 +13,7 @@
         android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:text="Get Started"
-        android:background="#32B837"
+        android:background="#009688"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
