--- a/app/src/main/res/layout/ddrawale_menu_image_text.xml
+++ b/app/src/main/res/layout/ddrawale_menu_image_text.xml
@@ -5,7 +5,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="8dp"
-    android:background="#FF009688">
+    android:background="#2196F3">
 
         <ImageView
             android:id="@+id/menu_item_icon"
@@ -21,7 +21,7 @@
         android:text=""
         android:textStyle="bold"
         android:textSize="16sp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
 </LinearLayout>
