--- a/app/src/main/res/layout/fragment_loginfragement.xml
+++ b/app/src/main/res/layout/fragment_loginfragement.xml
@@ -12,7 +12,7 @@ android:id="@+id/loogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Online Auction"
-        android:textColor="#009688"
+        android:textColor="#2196F3"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -151,15 +151,16 @@ android:id="@+id/loogin"
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/login1"
+
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:background="#009688"
+        android:background="@drawable/round_button"
         android:text="Login"
-        android:textStyle="bold"
         android:textSize="17dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.47"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.672" />
