--- a/app/src/main/res/layout/fragment_registrationfragment.xml
+++ b/app/src/main/res/layout/fragment_registrationfragment.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Online Auction"
-        android:textColor="#009688"
+        android:textColor="#2196F3"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -129,7 +129,7 @@
         android:id="@+id/registerbtn"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:background="#009688"
+        android:background="@drawable/round_button"
         android:text="Register"
         android:textSize="17dp"
         android:textStyle="bold"
